# TGKit

./: .gitignore  Cargo.toml
crates/new-message-event-handler/: Cargo.toml
crates/new-message-event-handler/src/: lib.rs
crates/new-message-event-handler/src/types/: message_handler.rs  mod.rs  rule.rs
crates/tg-kit-core/: Cargo.toml
crates/tg-kit-core/src/: event_handler.rs  lib.rs  middleware.rs
examples/: lib.rs  start.rs
src/: builder.rs  client.rs  event_dispatcher.rs  lib.rs  middleware.rs
src/conversation/: conversation_container.rs  conversation_state.rs  mod.rs
src/dispatcher/: builder.rs  mod.rs
src/handlers/: mod.rs
src/handlers/callback_query_handler/: builder.rs  mod.rs
src/handlers/callback_query_handler/callback_handler/: mod.rs
src/handlers/new_message_handler/: builder.rs  mod.rs  rule_checker.rs
src/handlers/new_message_handler/message_handler/: mod.rs
src/rules/: callback.rs  message.rs  mod.rs
src/rules/callback/: data.rs  mod.rs
src/rules/message/: command.rs  mod.rs  or.rs  regex.rs  text.rs
src/types/: mod.rs
src/utils/: bot_reconnection_policy.rs  mod.rs  session.rs
tg-kit-rules/: Cargo.toml
tg-kit-rules/src/callback/: data.rs  mod.rs
tg-kit-rules/src/message/: command.rs  from_sender.rs  mod.rs  or.rs  regex.rs  text.rs
