[workspace]
members = []

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
grammers-client.git = "https://github.com/Lonami/grammers.git"
grammers-session.git = "https://github.com/Lonami/grammers.git"
grammers-tl-types.git = "https://github.com/Lonami/grammers.git"
linkme = "0.3"
log = "0.4"
tokio = { version = "1", features = ["full"] }

[workspace.package]
version = "0.2.0"
edition = "2024"

[package]
name = "tg-kit"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
grammers-client.workspace = true
grammers-session.workspace = true
grammers-tl-types.workspace = true
log.workspace = true
regex = "1.11.1"
tokio.workspace = true

[dev-dependencies]
dotenvy = "0.15"
logforth = "0.24.0"
