[workspace]
members = ["tg-kit-rules"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
grammers-client.git = "https://github.com/Lonami/grammers.git"
grammers-session.git = "https://github.com/Lonami/grammers.git"
log = "0.4"
regex = "1.11.1"
tokio = { version = "1", features = ["full"] }

tg-kit.path = "."
tg-kit-rules.path = "tg-kit-rules"

[workspace.package]
version = "0.3.0"
edition = "2024"

[package]
name = "tg-kit"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dashmap = "6.1.0"
grammers-client.workspace = true
grammers-session.workspace = true
log.workspace = true
tokio.workspace = true

[dev-dependencies]
dotenvy = "0.15"
logforth = "0.24.0"
tg-kit-rules.workspace = true
